fix(cros-kernel/x86_64_defconfig) enable vmware drivers
Build the vmware drivers so that machines can be properly managed on
those systems.

--- a/eclass/cros-kernel/x86_64_defconfig
+++ b/eclass/cros-kernel/x86_64_defconfig
@@ -1095,7 +1095,7 @@ CONFIG_XEN_BLKDEV_FRONTEND=y
 # CONFIG_SENSORS_APDS990X is not set
 # CONFIG_HMC6352 is not set
 # CONFIG_DS1682 is not set
-# CONFIG_VMWARE_BALLOON is not set
+CONFIG_VMWARE_BALLOON=m
 # CONFIG_BMP085_I2C is not set
 # CONFIG_PCH_PHUB is not set
 # CONFIG_USB_SWITCH_FSA9480 is not set
@@ -1120,7 +1120,7 @@ CONFIG_XEN_BLKDEV_FRONTEND=y
 #
 # CONFIG_ALTERA_STAPL is not set
 # CONFIG_INTEL_MEI is not set
-# CONFIG_VMWARE_VMCI is not set
+CONFIG_VMWARE_VMCI=m
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
@@ -1190,7 +1190,7 @@ CONFIG_ISCSI_BOOT_SYSFS=m
 # CONFIG_SCSI_UFSHCD is not set
 # CONFIG_SCSI_HPTIOP is not set
 # CONFIG_SCSI_BUSLOGIC is not set
-# CONFIG_VMWARE_PVSCSI is not set
+CONFIG_VMWARE_PVSCSI=m
 CONFIG_HYPERV_STORAGE=m
 # CONFIG_LIBFC is not set
 # CONFIG_LIBFCOE is not set
