fix(coreos/config): Replace old ChromiumOS SDK binhosts and tarball.
Building our own packages so we don't want the old ones! This is just a
first stage, automated builds aren't going yet and I'm not covering
amd64-generic and its cross toolchain, just the sdk.

The old binhost/host/*.conf files are just stubbed out until I'm
positive nothing else is referring to them.

--- a/coreos/binhost/host/amd64-PREFLIGHT_BINHOST.conf
+++ b/coreos/binhost/host/amd64-PREFLIGHT_BINHOST.conf
@@ -1,1 +1,1 @@
-PREFLIGHT_BINHOST="https://commondatastorage.googleapis.com/chromeos-prebuilt/host/amd64/amd64-generic/paladin-R26-3659.0.0-rc7/packages/ https://commondatastorage.googleapis.com/chromeos-prebuilt/host/amd64/x86-generic/paladin-R26-3659.0.0-rc7/packages/"
+PREFLIGHT_BINHOST=""
