--- a/coreos/binhost/host/amd64-LATEST_RELEASE_CHROME_BINHOST.conf
+++ b/coreos/binhost/host/amd64-LATEST_RELEASE_CHROME_BINHOST.conf
@@ -1,1 +1,1 @@
-LATEST_RELEASE_CHROME_BINHOST=http://commondatastorage.googleapis.com/chromeos-prebuilt/host/amd64/chrome-27.05.11.033811/packages/
+LATEST_RELEASE_CHROME_BINHOST=""
