--- a/coreos/binhost/host/sdk_version.conf
+++ b/coreos/binhost/host/sdk_version.conf
@@ -1,3 +1,3 @@
-SDK_LATEST_VERSION="2013.03.07.000000"
-BOOTSTRAP_LATEST_VERSION="20130130"
+SDK_LATEST_VERSION="20130621235834"
+BOOTSTRAP_LATEST_VERSION="20130621235834"
 TC_PATH="2013/03/%(target)s-2013.03.07.000000.tar.xz"
