--- a/coreos-base/update_engine/files/update-engine.service
+++ b/coreos-base/update_engine/files/update-engine.service
@@ -7,6 +7,8 @@ Type=dbus
 BusName=org.chromium.UpdateEngine
 ExecStart=/usr/sbin/update_engine -foreground -logtostderr -no_connection_manager
 BlockIOWeight=100
+Restart=always
+RestartSec=30
 
 [Install]
 WantedBy=multi-user.target
