feat(dev-db): coordinate with the c10n service
this is an experiment to coordinate etcd with c10n.

--- a/dev-db/etcd/files/etcd.service
+++ b/dev-db/etcd/files/etcd.service
@@ -1,4 +1,6 @@
 [Service]
+ExecStartPre=-/bin/mkdir -p /var/run/etcd
+ExecStartPre=/usr/bin/coreos-c10n
 ExecStart=/usr/bin/etcd-bootstrap
 
 [Install]
