feat(dev-db/etcd): run as etcd user
thie patch does a few things

1) Add the etcd user and run etcd as that user

2) Add the /var/lib/etcd directory and have it owned by the etcd user

3) Move /media/state/etcd/* files into /var/lib/etcd/ and chown them to
   etcd

Test-plan: Build an AMI and ensure this all works with the
bootstrapping.

--- a/dev-db/etcd/files/etcd.service
+++ b/dev-db/etcd/files/etcd.service
@@ -1,4 +1,7 @@
 [Service]
+User=etcd
+PermissionsStartOnly=true
+ExecStartPre=/usr/bin/etcd-pre-exec
 ExecStart=/usr/bin/etcd-bootstrap
 
 [Install]
