fix(sys-kernel/coreos-kernel): Add evdev module.
ACPI power buttons are input devices! Without this it isn't possible to
trigger a graceful shutdown via qemu's command 'system_powerdown' or
whatever libvirt and similar APIs that are layered on top of it.

Probably applicable to other things too that we just don't know about.

--- a/eclass/cros-kernel/x86_64_defconfig
+++ b/eclass/cros-kernel/x86_64_defconfig
@@ -1521,7 +1521,7 @@ CONFIG_INPUT_MOUSEDEV=y
 CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
 # CONFIG_INPUT_JOYDEV is not set
-# CONFIG_INPUT_EVDEV is not set
+CONFIG_INPUT_EVDEV=m
 # CONFIG_INPUT_EVBUG is not set
 
 #
