fix(sys-kernel/coreos-kernel): Fix virtfs+dbus, add PCI hotplug.
This adds the following patch: (sent upstream, waiting on response)
  "9p: send uevent after adding/removing mount_tag attribute"

Also enable PCI hotplug to take advantage of more qemu fun! Now
adding/removing virtio devices (which are represented as PCI devices)
at runtime via the qemu monitor console works.

--- a/eclass/cros-kernel/x86_64_defconfig
+++ b/eclass/cros-kernel/x86_64_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 3.10.1 Kernel Configuration
+# Linux/x86 3.10.5 Kernel Configuration
 #
 CONFIG_64BIT=y
 CONFIG_X86_64=y
@@ -552,6 +552,7 @@ CONFIG_PCI_XEN=y
 CONFIG_PCI_DOMAINS=y
 # CONFIG_PCI_CNB20LE_QUIRK is not set
 CONFIG_PCIEPORTBUS=y
+CONFIG_HOTPLUG_PCI_PCIE=y
 CONFIG_PCIEAER=y
 CONFIG_PCIE_ECRC=y
 # CONFIG_PCIEAER_INJECT is not set
@@ -576,7 +577,11 @@ CONFIG_PCI_LABEL=y
 CONFIG_ISA_DMA_API=y
 CONFIG_AMD_NB=y
 # CONFIG_PCCARD is not set
-# CONFIG_HOTPLUG_PCI is not set
+CONFIG_HOTPLUG_PCI=y
+CONFIG_HOTPLUG_PCI_ACPI=y
+# CONFIG_HOTPLUG_PCI_ACPI_IBM is not set
+# CONFIG_HOTPLUG_PCI_CPCI is not set
+# CONFIG_HOTPLUG_PCI_SHPC is not set
 # CONFIG_RAPIDIO is not set
 
 #
