feat(dev-db/etcd): set restart service policy

--- a/dev-db/etcd/files/etcd.service
+++ b/dev-db/etcd/files/etcd.service
@@ -9,5 +9,10 @@ PermissionsStartOnly=true
 ExecStartPre=/usr/bin/etcd-pre-exec
 ExecStart=/usr/bin/etcd-bootstrap
 
+Restart=always
+# Set a longish timeout in case this machine isn't behaving
+# nicely and bothering the rest of the cluster
+RestartSec=10s
+
 [Install]
 WantedBy=multi-user.target
